Compiling using visual studio 2015 and cmake 3.5.0-rc1 will upgrade to qt 5.x as we need support for x64

--- a/AppTest/CMakeLists.txt
+++ b/AppTest/CMakeLists.txt
@@ -30,8 +30,8 @@ SET(AppTest_ASSETS_DIR ${AppTest_SOURCE_DIR}/Embedded_Resources CACHE PATH "Reso
 INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
 
 INCLUDE_DIRECTORIES(${3rdParty_DIR})
-INCLUDE_DIRECTORIES(${UIViews_SOURCE_DIR}/cmake/AppTest/Src/)
-INCLUDE_DIRECTORIES(${UIViews_SOURCE_DIR}/)
+INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/AppTest/Src/)
+INCLUDE_DIRECTORIES(${Cheezy_SOURCE_DIR}/)
 
 SET(AppTest_SC_BRANCH "${AppTest_SOURCE_DIR}" CACHE STRING "AppTests Source Control Branch")
 SET(AppTest_SC_VERSION 0 CACHE INT "AppTest Source Control Revision")
@@ -45,9 +45,9 @@ SET(AppTest_BUILD_LABEL "local_build" CACHE STRING "AppTest CI Server Build Labe
 IF(WIN32)
 	SET(EXECUTABLE_FORMAT WIN32)
 
-	SET(LIBRARY_OUTPUT_PATH ${UIViews_SOURCE_DIR}/bin/AppTest/win32/)
-	SET(EXECUTABLE_OUTPUT_PATH ${UIViews_SOURCE_DIR}/bin/AppTest/win32/)
-	LINK_DIRECTORIES(${UIViews_SOURCE_DIR}/bin/$(PlatformName)/)
+	SET(LIBRARY_OUTPUT_PATH ${Cheezy_SOURCE_DIR}/bin/AppTest/win32/)
+	SET(EXECUTABLE_OUTPUT_PATH ${Cheezy_SOURCE_DIR}/bin/AppTest/win32/)
+	LINK_DIRECTORIES(${Cheezy_SOURCE_DIR}/bin/$(PlatformName)/)
 
 ENDIF(WIN32)
 
