--- a/luabridge/CMakeLists.txt
+++ b/luabridge/CMakeLists.txt
@@ -9,8 +9,8 @@ ENDIF( ${CMAKE_MINOR_VERSION} GREATER 4 )
 #3rd partys and additional include paths
 SET(3rdParty_DIR ${LuaBridge_SOURCE_DIR}/../../3rdParty CACHE PATH "3rdParty Directory")
 INCLUDE_DIRECTORIES(${3rdParty_DIR})
-INCLUDE_DIRECTORIES(${UIViews_SOURCE_DIR})
-INCLUDE_DIRECTORIES(${UIViews_SOURCE_DIR}/cmake/LuaBridge/Src/)
+INCLUDE_DIRECTORIES(${Cheezy_SOURCE_DIR})
+INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/LuaBridge/Src/)
 INCLUDE_DIRECTORIES(../)
 
 
